# llvm-ast

./: .gitignore  CMakeLists.txt  README.md  ast_example.cpp  compile.sh  llvm.sh  run.sh
examples/add/: add_two_numbers.cpp  compile_commands.json
examples/hip_add/: add_two_numbers.hip  compile_commands.json
